<resources>
    <string name="app_name">MovieDiscussion</string>
    <string name="action_search_title">Search</string>
    <string name="action_sign_out_title">sign out</string>
    <string name="movies_section_title">Movies</string>
    <string name="see_all">See all</string>
    <string name="tv_section_title">TV</string>
    <string name="cast_title">Cast</string>
    <string name="vote_count">(%1$d)</string>
    <string name="unavailable_content">N/A</string>
    <string name="trending_title">Trending</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_splash_screen_fragment">Hello splash screen fragment</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="update_text">Update</string>
</resources>